<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_2sdp"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="@dimen/_20sdp"
      android:background="@drawable/main_shadow_background"
      android:gravity="start"
      android:orientation="vertical"
      android:padding="@dimen/_2sdp"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_gravity="center|start|top"
      android:orientation="vertical"
      android:padding="@dimen/_3sdp"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:orientation="horizontal"
        android:padding="@dimen/_2sdp"
        >

      <TextView
          android:id="@+id/txtNumber"
          android:layout_width="@dimen/_45sdp"
          android:layout_height="@dimen/_45sdp"
          android:background="@drawable/gradient_background"
          android:contentDescription="@string/app_name"
          android:fontFamily="@font/roboto_bold"
          android:gravity="center"
          android:padding="@dimen/_5sdp"
          android:textColor="@color/colorWhite"
          android:textSize="@dimen/_24sdp"
          />

      <TextView
          android:id="@+id/txtOfferName"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_3sdp"
          android:ellipsize="end"
          android:fontFamily="@font/roboto_medium"
          android:gravity="center"
          android:lines="1"
          android:padding="@dimen/_5sdp"
          android:textColor="@color/colorBlack"
          android:textSize="@dimen/_13sdp"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        >

      <TextView
          android:id="@+id/txtOfferAmount"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_5sdp"
          android:fontFamily="@font/roboto_medium"
          android:padding="@dimen/_5sdp"
          android:text=""
          android:textColor="@color/oil"
          android:textSize="@dimen/_10sdp"
          />

      <TextView
          android:id="@+id/txtOfferDescription"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/_5sdp"
          android:ellipsize="end"
          android:fontFamily="@font/roboto_medium"
          android:gravity="center|start"
          android:padding="@dimen/_5sdp"
          android:text=""
          android:textColor="@color/oil"
          android:textSize="@dimen/_10sdp"
          />

      <LinearLayout
          android:id="@+id/daysView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_marginBottom="@dimen/_5sdp"
          android:layout_marginTop="@dimen/_5sdp"
          android:orientation="vertical"
          >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/monsoon"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:padding="@dimen/_5sdp"
            android:text="@string/str_days_on_offer_eligible"
            android:textColor="@color/oil"
            android:textSize="@dimen/_10sdp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            >

          <TextView
              android:id="@+id/txtSunday"
              android:layout_width="@dimen/_30sdp"
              android:layout_height="@dimen/_30sdp"
              android:layout_margin="@dimen/_2sdp"
              android:background="@drawable/ico_filled_circle"
              android:fontFamily="@font/roboto_black"
              android:gravity="center"
              android:text="@string/str_sunday"
              android:textColor="@color/colorWhite"
              android:textSize="@dimen/_10sdp"
              android:visibility="gone"
              />

          <TextView
              android:id="@+id/txtMonday"
              android:layout_width="@dimen/_30sdp"
              android:layout_height="@dimen/_30sdp"
              android:layout_margin="@dimen/_2sdp"
              android:background="@drawable/ico_filled_circle"
              android:fontFamily="@font/roboto_black"
              android:gravity="center"
              android:text="@string/str_monday"
              android:textColor="@color/colorWhite"
              android:textSize="@dimen/_10sdp"
              android:visibility="gone"
              />

          <TextView
              android:id="@+id/txtTuesday"
              android:layout_width="@dimen/_30sdp"
              android:layout_height="@dimen/_30sdp"
              android:layout_margin="@dimen/_2sdp"
              android:background="@drawable/ico_filled_circle"
              android:fontFamily="@font/roboto_black"
              android:gravity="center"
              android:text="@string/str_tuesday"
              android:textColor="@color/colorWhite"
              android:textSize="@dimen/_10sdp"
              android:visibility="gone"
              />

          <TextView
              android:id="@+id/txtWednesday"
              android:layout_width="@dimen/_30sdp"
              android:layout_height="@dimen/_30sdp"
              android:layout_margin="@dimen/_2sdp"
              android:background="@drawable/ico_filled_circle"
              android:fontFamily="@font/roboto_black"
              android:gravity="center"
              android:text="@string/str_wednesday"
              android:textColor="@color/colorWhite"
              android:textSize="@dimen/_10sdp"
              android:visibility="gone"
              />

          <TextView
              android:id="@+id/txtThursday"
              android:layout_width="@dimen/_30sdp"
              android:layout_height="@dimen/_30sdp"
              android:layout_margin="@dimen/_2sdp"
              android:background="@drawable/ico_filled_circle"
              android:fontFamily="@font/roboto_black"
              android:gravity="center"
              android:text="@string/str_thursday"
              android:textColor="@color/colorWhite"
              android:textSize="@dimen/_10sdp"
              android:visibility="gone"
              />

          <TextView
              android:id="@+id/txtFriday"
              android:layout_width="@dimen/_30sdp"
              android:layout_height="@dimen/_30sdp"
              android:layout_margin="@dimen/_2sdp"
              android:background="@drawable/ico_filled_circle"
              android:fontFamily="@font/roboto_black"
              android:gravity="center"
              android:text="@string/str_friday"
              android:textColor="@color/colorWhite"
              android:textSize="@dimen/_10sdp"
              android:visibility="gone"
              />

          <TextView
              android:id="@+id/txtSaturday"
              android:layout_width="@dimen/_30sdp"
              android:layout_height="@dimen/_30sdp"
              android:layout_margin="@dimen/_2sdp"
              android:background="@drawable/ico_filled_circle"
              android:fontFamily="@font/roboto_black"
              android:gravity="center"
              android:text="@string/str_saturday"
              android:textColor="@color/colorWhite"
              android:textSize="@dimen/_10sdp"
              android:visibility="gone"
              />

        </LinearLayout>

      </LinearLayout>

    </LinearLayout>

  </LinearLayout>

</FrameLayout>