<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.loginregister.LoginActivity"
    >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:background="@drawable/toolbar_gradient"
        />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_130sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/image_round_background"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/app_logo"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/roboto_black"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/str_forgot_password"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_below="@+id/txtForgotPassword"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/main_shadow_background"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_8sdp"
          android:background="@drawable/edt_shadow_background"
          android:orientation="vertical"
          >

        <EditText
            android:id="@+id/edtUserId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_36sdp"
            android:background="@null"
            android:drawableLeft="@drawable/ico_mail_svg"
            android:drawablePadding="@dimen/_15sdp"
            android:drawableStart="@drawable/ico_mail_svg"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/str_email_mobile"
            android:inputType="text"
            android:padding="@dimen/_8sdp"
            android:textSize="@dimen/_12sdp"
            />

      </LinearLayout>

    </LinearLayout>

  </RelativeLayout>

  <android.support.v7.widget.AppCompatButton
      android:id="@+id/btnSubmit"
      android:layout_width="@dimen/_150sdp"
      android:layout_height="@dimen/_32sdp"
      android:layout_gravity="center"
      android:layout_marginTop="-35dp"
      android:background="@drawable/btn_shadow_background"
      android:fontFamily="@font/roboto_black"
      android:text="@string/str_submit"
      android:textAllCaps="false"
      android:textColor="@color/colorWhite"
      android:textSize="@dimen/_12sdp"
      />

</LinearLayout>